<resources>
    <string name="app_name">BEAR LOADER</string>

    <string name="erorserver">Check your connection</string>
    <string name="confirm">Confirm</string>
    <string name="activity_mode_textsstart_text"><marquee>Click start</marquee></string>
    <string name="activity_navigation_textroot_text">Root Access</string>
    <string name="bottom_sheet_dialog_layout_title_text">title</string>
    <string name="bottom_sheet_dialog_layout_msg_text">masasge</string>
    <string name="bottom_sheet_dialog_layout_btn_cancle_text">@android:string/no</string>
    <string name="bottom_sheet_dialog_layout_btn_text">@android:string/ok</string>
    <string name="esp_aimbot_rangetext_text">0</string>
    <string name="esp_aimbot_distancetext_text">0</string>
    <string name="esp_aimbot_bulletspeedtext_text">0</string>
    <string name="esp_aimbot_recoiltext_text">0</string>
    <string name="esp_aimbot_radioButton_text">Head</string>
    <string name="esp_aimbot_radioButton2_text">Neck</string>
    <string name="esp_aimbot_radioButton3_text">Chest</string>
    <string name="esp_aimbot_radioButton9_text">Crosshair Priority</string>
    <string name="esp_aimbot_radioButton4_text">Distance Priority</string>
    <string name="esp_aimbot_radioButton5_text">Ads or Firing</string>
    <string name="esp_aimbot_radioButton6_text">Ads Only</string>
    <string name="esp_aimbot_radioButton7_text">Firing Only</string>
    <string name="esp_memory_rangetextwide_text">0</string>
    <string name="esp_line">Line</string>
    <string name="esp_box">Box</string>
    <string name="esp_skeleton">Skeleton</string>
    <string name="esp_health">Health</string>
    <string name="esp_distance">Distance</string>
    <string name="esp_Ignorebot">IgnoreBot</string>
    <string name="esp_alert">360° Alert</string>
    <string name="esp_throwables">Grenade Warning</string>
    <string name="esp_name">Name</string>
    <string name="esp_head">Head</string>
    <string name="esp_weapon">Weapon</string>
    <string name="esp_weaponicon">Weapon Icon</string>
    <string name="esp_visual_fps30_text">60FPS</string>
    <string name="esp_visual_fps60_text">90FPS</string>
    <string name="esp_visual_fps120_text">120FPS</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minute</string>
    <string name="seconds">Second</string>
    <string name="os_version">OS Version</string>
    <string name="global">GLOBAL</string>
    <string name="korea">KOREA</string>
    <string name="vietnam">VIETNAM</string>
    <string name="taiwan">TAIWAN</string>
    <string name="india">INDIA</string>
    <string name="ignore_knocked">Ignore Knocked</string>
    <string name="ignore_bot">Ignore Bot</string>
    <string name="aiming_range">Aiming Range</string>
    <string name="set_fov_radius_range">Set FOV Radius Range :</string>
    <string name="aiming_distance">Aiming Distance</string>
    <string name="aiming_speed">Aiming Speed</string>
    <string name="recoil_compesation">Recoil Compesation</string>
    <string name="set_the_weapon_compensation_recoil">set the weapon compensation recoil :</string>
    <string name="target_aiming">Target Aiming</string>
    <string name="aiming_priority">Aiming Priority</string>
    <string name="aim_trigger_mode">Aim Trigger Mode</string>
    <string name="small_crosshair">Small Crosshair</string>
    <string name="aimbot_100m">Aimbot 100M</string>
    <string name="wide_view">Set POV Player</string>
    <string name="expands_view_of_the_screen">Expands view of the screen</string>
    <string name="set_wide_view_range">Set Wide View Range :</string>
    <string name="esp_generic_adjustment">ESP Generic adjustment</string>
    <string name="render_framerate">Render Framerate</string>
    <string name="donwload">Download</string>
    <string name="please_click_icon_logout_for_exit">Please click icon logout for exit!!</string>
    <string name="root">Root Access</string>
    <string name="notooroot">Container</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_copy_licence_and_paste">"Please Copy Licence, and paste "</string>
    <string name="please_allow_permision_floating">Please grant floating window permission</string>
    <string name="bypass_launch_success">BYPASS LAUNCH SUCCESS</string>
    <string name="exit">Exit</string>

    <string name="copy">Copy</string>
    <string name="close">Close</string>
    <string name="yes">Yes</string>
    <string name="file_access_title">
     File Access Permissions</string>
    <string name="file_access_message">This app needs permission to access files in your device storage in order to function properly. Please grant permission to continue.</string>
    <string name="grant_permission">Grant Permission</string>

    <string name="touch_simulation">Touch Simulation</string>
    <string name="bullet_tracking">Bullet Tracking</string>
    <string name="touch_simulation_setting">Touch Simulation Setting</string>
    <string name="other_setting">Other Setting</string>
    <string name="sets_smooth_velocity_aim">Sets smooth velocity aim :</string>
    <string name="smooth_velocity">Smooth Velocity</string>
    <string name="sets_the_aiming_bullet_speed">Sets the aiming bullet speed :</string>
    <string name="aiming_bullet_speed">Aiming Bullet Speed</string>
    <string name="rotation_screen">Rotation Screen</string>
    <string name="check_all">CHECK ALL</string>
    <string name="none_all">NONE ALL</string>
    <string name="SafeMode">Safe Mode</string>
    <string name="start_floating_success">Start Floating Success</string>
    <string name="stop_floating_success">Stop Floating Success</string>
    <string name="protection_global">SERVER GLOBAL</string>
    <string name="global_selected">Global Selected</string>
    <string name="protection_korea">SERVER KOREA</string>
    <string name="korea_selected">Korea Selected</string>
    <string name="protection_vietnam">SERVER VIETNAM</string>
    <string name="vietnam_selected">Vietnam Selected</string>
    <string name="protection_taiwan">SERVER TAIWAN</string>
    <string name="taiwan_selected">Taiwan Selected</string>
    <string name="protection_india">SERVER INDIA</string>
    <string name="india_selected">India Selected</string>
    <string name="want_remove_it">Want remove it ?</string>
    <string name="not_installed_please_check">" not installed Please check!"</string>
    <string name="service_is_already_running">Service is already running.</string>
    <string name="please_delete_your_vpn_cannary">Please Delete your VPN Cannary</string>
    <string name="kontol" translatable="false">New version of the app is available please update now</string>
    <string name="downloading_new_version_of_app">Downloading new version of app</string>
    <string name="downloading_update" translatable="false">Downloading Update</string>
    <string name="application_already_latest_versiob" translatable="false">Application already latest version</string>
    <string name="show_area_touch">Show Area Touch</string>
    <string name="touch_range_size">Touch Range Size</string>
    <string name="sets_range_size_of_touch">Sets Range Size of Touch :</string>
    <string name="touch_position_x">Touch Position X</string>
    <string name="sets_postion_y_of_touch">Sets Postion Y of Touch :</string>
    <string name="setting_the_shot_distance">Setting the Shot Distance :</string>
    <string name="sets_the_shot_prediction_distance">Sets the shot prediction distance :</string>
    <string name="magic_bullet_head">Magic Bullet Head</string>
    <string name="magic_bullet_body">Magic Bullet Body</string>
    <string name="less_recoil">Less Recoil</string>
    <string name="_30fps">30FPS</string>
    <string name="app_description">Welcome VIP User</string>
    <string name="not_set">No Set</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="license_hint">Enter License Key (XXXXXX-XXXXXX-XXXXXX-XXXXXX-XXXXXX-XXXXXX)</string>
    <string name="license_invalid">Invalid license format. Please check and try again.</string>
    <string name="license_cleared">License field cleared due to invalid format</string>
    <string name="license_paste_success">License pasted successfully</string>
    <string name="clipboard_empty">Clipboard is empty or unavailable</string>
    <string name="login">LOGIN</string>
    <string name="buy_now">Buy Now</string>
    <string name="protection_logo">Logo Bypass</string>
    <string name="block_report_island">Island Bypass</string>
    <string name="esp_visual_isenableesp_text">Enable ESP</string>
</resources>
